--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -15,6 +15,7 @@ jobs:
           import os 
           import sys 
           print(os.getcwd())
+          print(os.listdir())
           sys.path.append(os.path.abspath('.'))
           print(os.getcwd())
         shell: python
