--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Install & Run pytest
         run: |
           python -m pip install -r requirements.txt
-          pytest tests/
+          pytest --cov=algotrade/ tests/
