--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -36,5 +36,6 @@ jobs:
 
       - name: Install & Run pytest
         run: |
+          dir 
           python -m pip install -r requirements.txt
           pytest --cov=algotrade/ tests/
