--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           import os 
           import sys 
-          sys.path.append(os.path.abspath('.'))
+          sys.path.append(os.path.join(os.path.abspath('.'), 'algotrade'))
         shell: python
 
       - name: Install system level libraries
