--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -37,5 +37,6 @@ jobs:
       - name: Install & Run pytest
         run: |
           dir 
+          echo $PYTHONPATH
           python -m pip install -r requirements.txt
-          pytest --cov=algotrade/ tests/
+          pytest tests/
