--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Add project root to Python Path
         run: |
+          ls -lart 
           import os 
           import sys 
           sys.path.append(os.path.join(os.path.abspath('.'), 'algotrade'))
