--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Add project root to Python Path
         run: |
           ls -lart 
-          export PYTHONPATH="${PYTHONPATH}:/$GITHUB_WORKSPACE/AlgoTrade/algotrade"
+          export PYTHONPATH="${PYTHONPATH}:algotrade/"
 
       - name: Install & Run pytest
         run: |
