--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - '*'
 
-defaults:
-  run:
-    working-directory: $GITHUB_WORKSPACE
-
 jobs:
   unit-tests-pytest:
     name: Run unit tests with pytest
@@ -22,13 +18,20 @@ jobs:
       - name: Checkout code from remote origin.
         uses: actions/checkout@v2
 
-      - name: Setup python version
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-          architecture: 'x64'
-
-      - name: Install & Run pytest
+      - name: Add project root to PYTHONPATH
         run: |
-          python -m pip install -r requirements.txt
+          import os
+          import sys
+          sys.path.append(os.path.abspath('.'))
+        shell: python
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
           pytest tests/
+        env:
+          PYTHONPATH: ${{ github.workspace }}
