--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install 
+        python -m pip install --upgrade setuptools
         pip install setuptools wheel twine
 
     - name: Build package
