Run cd after ci is completed.

--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - '*'
 
+  workflow_run:
+    workflows:
+      - "cd-build-upload.yml"
+    types:
+      - completed
+
 jobs:
   unit-tests-pytest:
     name: Run unit tests with pytest
