--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Get latest tag number
       id: get_latest_tag
       run: | 
-        latest_tag=$(git dexcribe --tags --abbrev=0)
+        latest_tag=$(git describe --tags --abbrev=0)
         tag_number=$(echo $latest_tag| sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\1/')
         echo "::set-output name=tag_number::$((tag_number + 1))"
 
