--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -1,12 +1,12 @@
-name: Publish Python Package
+name: Upload Python Package to PyPI
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
-  build-and-publish:
+  build-and-upload:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,37 +15,21 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.12
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
-        pip install setuptools wheel twine
+        pip install twine
 
     - name: Build package
       run: |
         python setup.py sdist bdist_wheel
 
-    - name: Publish to PyPI
+    - name: Upload to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        twine upload --verbose dist/*
-
-    - name: Get latest tag number
-      id: get_latest_tag
-      run: | 
-        latest_tag=$(git describe --tags --abbrev=0)
-        tag_number=$(echo $latest_tag| sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\1/')
-        echo "::set-output name=tag_number::$((tag_number + 1))"
-
-    - name: Create Release
-      id: create_release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: dist/*
-        tag_name: v${{ steps.get_latest_tag.outputs.tag_number }}
-        title: Release v${{ steps.get_latest_tag.outputs.tag_number }}
-        body: Automated release created by GitHub Actions
+        twine upload --repository pypi dist/*
