--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,11 @@
 [tool.isort]
 profile = "black"
-skip = [".gitignore", ".dockerignore", "py11venv", "venv", ".github"]
-src_paths = ["trade", "tests"]
+skip = [".gitignore", ".dockerignore", "py11venv", "venv"]
+src_paths = ["algotrade", "tests"]
 
 [tool.black]
 line-length=88
-target-version=['py311', 'py312']
+target-version=['py311']
 
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
 
-[project]
-name = "market-generics_sharmasourab93"
-version = "0.0"
-authors = [
-  { name="Sourab S Sharma", email="sharmasourab93@gmail.com" },
-]
-description = "A Generic Market Package"
-readme = "README.md"
-requires-python = ">=3.11"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
 
-[project.urls]
-Homepage = "https://github.com/sharmasourab93/market-gen"
-Issues = "https://github.com/sharmasourab93/market-gen/issues"
