--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - develop
 
 jobs:
   build-and-upload:
@@ -32,4 +33,7 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        twine upload --repository pypi dist/* --verbose 
+        if [ ${{github.ref }} == 'refs/heads/master' ]; then
+          twine upload --repository pypi dist/* --verbose
+        else: 
+          twine upload --repository testpypi dist/* --verbose
