--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+    needs:
+      - ci-format
+      - ci-test-run
 
     steps:
     - uses: actions/checkout@v2
