--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -9,9 +9,14 @@ on:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+    needs:
+      - ci-format
+      - ci-test-run
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -22,32 +27,20 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
-        pip install twine
+        pip install twine python-semantic-release
 
-    - name: Build package
-      run: |
-        python setup.py sdist bdist_wheel
-
-    - name: Upload to PyPI
+    - name: Semantic Release
       env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        if [[ ${{github.ref }} == 'refs/heads/master' ]]; then
-          twine upload --repository pypi dist/* --verbose
-        else: 
-          twine upload --repository testpypi dist/* --verbose
+        if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+          semantic-release version 
+          python setp.py sdist bdist_wheel
+          semantic-release publish 
+        elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
+          semantic-release version 
+          python setup.py sdist bdist_wheel 
+          semantic-release publish --test 
         fi
-
-    - name: Create Release
-      id: create_release
-      if: github.ref == 'refs/heads/master'
-      uses: softprops/action-gh-release@v1
-      with:
-        files: dist/*
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: | 
-          Release created automatically by GitHub Actions.
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
