--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ line-length=88
 target-version=['py311']
 
 [tool.semantic_release]
-version_variables = "setup.py:__version__"
+version_variables = ["setup.py:__version__"]
 version_source = "setup.py"
 branch = "master"
 changelog_file = "CHANGELOG.md"
