--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -31,12 +31,11 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
+        semantic-release version 
+        python setup.py sdist bdist_wheel
+        
         if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
-          semantic-release version 
-          python setp.py sdist bdist_wheel
           semantic-release publish 
         elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
-          semantic-release version 
-          python setup.py sdist bdist_wheel 
-          semantic-release publish --test 
+          semantic-release publish --repository testpypi  
         fi
