--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -37,6 +37,6 @@ jobs:
         if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
           semantic-release publish 
         elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
-          export TWINE_REPOSITORY=testpypi;
-          semantic-release publish --repository testpypi  
+          export TWINE_REPOSITORY_URL=https://test.pypi.org/legacy/
+          twine upload --repository-url $TWINE_REPOSITORY_URL dist/*
         fi
