--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -37,5 +37,5 @@ jobs:
         if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
           semantic-release publish 
         elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
-          twine upload testpypi dist/* --verbose 
+          twine upload --repository testpypi dist/* --verbose 
         fi
