--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -37,5 +37,6 @@ jobs:
         if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
           semantic-release publish 
         elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
+          export TWINE_PASSWORD=${{ secrets.TEST_PYPI_PASSWORD }};
           twine upload --repository testpypi dist/* --verbose 
         fi
