--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+    needs: unit-tests-pytest
     steps:
     - uses: actions/checkout@v2
       with:
