--- a/.github/workflows/ci-test-run.yml
+++ b/.github/workflows/ci-test-run.yml
@@ -5,16 +5,17 @@ on:
     branches:
       - '*'
 
-  workflow_run:
-    workflows:
-      - "cd-build-upload.yml"
-    types:
-      - completed
+  pull_request:
+    branches:
+      - '*'
+      - '!master'
+      - '!develop'
 
 jobs:
   unit-tests-pytest:
     name: Run unit tests with pytest
     runs-on: ubuntu-latest
+    needs: format
     steps:
       - name: Install system level libraries
         run: |
