--- a/.github/workflows/cd-build-upload.yml
+++ b/.github/workflows/cd-build-upload.yml
@@ -35,10 +35,10 @@ jobs:
         semantic-release version 
         
         if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
-          semantic-release publish --no-commit
+          semantic-release publish 
           twine upload dist/* --verbose
         elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then 
-          semantic-release publish --no-committ
+          semantic-release publish
           export TWINE_PASSWORD=${{ secrets.TEST_PYPI_PASSWORD }};
           twine upload --repository testpypi dist/* --verbose 
         fi
